2009-02-28  Les Harris  <lharris@gnome.org>

	* src/debug-logger.c (debug_logger_init), (debug_logger_finalize),
	(debug_logger_save_clicked), (debug_logger_copy_clicked),
	(debug_logger_select_clicked), (debug_logger_log_func),
	(debug_logger_add_domain), (debug_logger_remove_domain): Now frees
	domain handlers on remove.  UI dims/undims as needed. Added Type
	column in treeview.  Wrapped text in gettext macros.
	* src/gnome-mud.c (main): Temp log spam added.
	* ui/main.glade: Added accelerators for the debug logger's ui.

2009-02-28  Les Harris  <lharris@gnome.org>

	* configure.ac: Added autofoo for debug logger, off by default.
	* src/Makefile.am: Autofoo for debug logger.
	* src/debug-logger.[ch]: New files which implement the debug logger. 
	* src/gnome-mud.c (main): Now creates two logger domains.
	* src/mud-telnet-mccp.c (mud_mccp_decompress): Changed mccp
	decompression back to faster method.
	* src/mud-telnet.c (mud_telnet_process),
	(mud_telnet_get_telopt_string): Changed logging to use new logger,
	added more debug info in telopt_string.
	* ui/Makefile.am:
	* ui/directions.glade: Removed directions.glade.
	* ui/main.glade: Added ui for debug logger.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mccp.c (mud_mccp_decompress): Reverted MCCP code.

2009-02-27  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated for 0.11.2.

	* Makefile.am, configure.ac: Stop generating a .lsm file for ibiblio.
	* gnome-mud.lsm.in: Removed.

	* configure.ac: Release gnome-mud 0.11.2.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mccp.c (mud_mccp_decompress): Replaced character
	iteration with g_string_append_len.
	* ui/prefs.glade: Set the left treeview to no expand so the ui on the
	right expands properly.

2009-02-27  Les Harris  <lharris@gnome.org>

	* gnome-mud.schemas.in: Pruned unused keys from schema.
	* plugins/Makefile.am:
	* plugins/automapper/Makefile:
	* plugins/automapper/directions.h:
	* plugins/automapper/map-link.c: